
Table "people" {
  "id" int [pk, increment]
  "name" varchar [not null, unique]
  "biography" text
  "headshot_url" varchar
}

Table productions {
  id int [pk, increment]
  name varchar [not null]
  season_id int [not null]
}

Table production_people {
  production_id int [not null]
  person_id int [not null]
  role_type varchar [note: 'Enum: cast, production_team, orchestra, creative']
  role varchar
}

Table production_works {
  production_id int [not null]
  work_id int [not null]
}

Table seasons {
  id int [pk, increment]
  slug varchar [not null, unique]
  label varchar [not null]
  overview text
  start_date datetime [not null]
}

Table users {
  id int [pk, increment]
  email varchar(255) [not null, unique]
  registered_at datetime [not null]
}

Table works {
  id int [pk, increment]
  title varchar
}

// one season has many productions
Ref: seasons.id < productions.season_id

// a production will have one or more works
Ref: productions.id < production_works.production_id

// but one work could appear in many productions
Ref: works.id < production_works.work_id

// every production will have one or more personnel
Ref: productions.id < production_people.production_id

// and a person will appear in one or productions
Ref: people.id < production_people.person_id